# prelude

./: AGENTS.md  Cargo.toml  README.md  flake.nix  pyproject.toml
nix/: devshell.nix  packages.nix  windows-build.nix  windows-deps.nix
prelude/: application.py  main.py  midi_engine.py
src/: application.rs  engine.rs  main.rs  midi_view.rs
ui/: main.cmb  style.css  window.ui
