[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "prelude"
version = "0.1.0"

authors = [{ name = "Eason20000", email = "eason05wyc@outlook.com" }]
maintainers = []
description = ""
readme = "README.md"
keywords = []
license = "GPL-3.0-only"

requires-python = ">=3.13"
dependencies = [
    "mido >=1.3.3, <2.0.0",
    "python-rtmidi >=1.5.8, <2.0.0",
    "pygobject >=3.54.5, <4.0.0"
]

[project.scripts]
prelude = "prelude.main:main"
